// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initial render 1`] = `
<li
  className="FrostingBlob"
  style={
    Object {
      "bottom": "34px",
      "height": "82px",
      "left": "22px",
      "transform": "rotate(-0.030000000000000027rad)",
      "width": "45px",
    }
  }
/>
`;

exports[`Splats when landing at the bottom 1`] = `
<li
  className="FrostingBlob splat"
  style={
    Object {
      "bottom": "0px",
      "height": "82px",
      "left": "22px",
      "transform": "rotate(0rad)",
      "width": "82px",
    }
  }
/>
`;
